# fled_page_version_cl

./: README.md  format.md  pyproject.toml  requirements.txt  user_preferences.txt
formats/: executive_compact.md  executive_detailed.md  project_compact.md  project_summary.md  ticket_compact.md  ticket_summary.md
prompts/: base_report.txt  compression.txt  decision.txt  extraction.txt  finalize.txt  perspective_section.txt  rewrite_global.txt  rewrite_section.txt
src/livedoc/: __init__.py  __main__.py  cli.py
src/livedoc/config/: __init__.py  settings.py
src/livedoc/core/: __init__.py  context.py  document.py  extraction.py  pipeline.py  stage.py
src/livedoc/llm/: __init__.py  client.py  ollama.py  vllm.py
src/livedoc/stages/: __init__.py  compress.py  convert.py  extract.py  finalize.py  integrate.py  perspective.py
src/livedoc/utils/: __init__.py  checkpoint.py  date_event.py  parsing.py
tests/: __init__.py
